--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,7 +91,7 @@ flutter_launcher_icons:
 
 flutter_assets:
   assets_path: assets/images/
-  output_path: lib/core/utils/assets.dart
+  output_path: lib/core/utils/
   filename: assets.dart
 flutter_intl:
   enabled: true
