--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
   dots_indicator: ^4.0.1
+  firebase_core: ^3.13.0
   flutter:
     sdk: flutter
   flutter_localizations:
