--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   dots_indicator: ^4.0.1
   firebase_core: ^3.13.0
   flutter:
