--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get_it: ^8.0.3
   google_sign_in: ^6.3.0
   modal_progress_hud_nsn: ^0.5.1
+  persistent_bottom_nav_bar: ^6.2.1
   shared_preferences: ^2.5.3
 
 dev_dependencies:
